# crisp

./: .env.example  .gitignore  CLAUDE.md  CRISP-BUILD-SPEC.md  CRISP-STRATEGY.md  package-lock.json  package.json  plan.md  tailwind.config.ts
.github/workflows/: desktop-release.yml  extension-release.yml
apps/desktop/: BUILD.md  index.html  package.json
apps/desktop/src/: Popover.tsx  Settings.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/extension/: BUILD.md  manifest.json
apps/extension/public/: popup.html  popup.js
apps/extension/src/: background.js  content.css  content.js
prisma/: schema.prisma
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/analytics/: route.ts
src/app/api/calibrate/: route.ts
src/app/api/crisp/: route.ts
src/app/api/feedback/: route.ts
src/app/api/share/: route.ts
src/app/api/templates/: route.ts
src/app/api/user/: route.ts
src/app/app/: page.tsx
src/app/app/analytics/: page.tsx
src/app/download/: page.tsx
src/app/try/: page.tsx
src/components/: AudienceManager.tsx  AudienceSelector.tsx  BrandingEditor.tsx  CrispComparison.tsx  CustomOutputTypeManager.tsx  DiffView.tsx  IntegrationsManager.tsx  Logo.tsx  Navbar.tsx  OutputCard.tsx  PasteZone.tsx  Sidebar.tsx  ThoughtDepthIndicator.tsx  ToneSlider.tsx  UpgradeModal.tsx  VoiceProfileEditor.tsx
src/lib/: auth.ts  clerk-helpers.tsx  document-export.ts  document-parser.ts  output-types.ts  prisma.ts  prompts.ts  store.ts
src/types/: speech-recognition.d.ts
(+27 files in other folders)
