[package]
name = "crisp-desktop"
version = "0.1.0"
description = "Crisp — Make AI sound like you. Menu bar app for macOS."
authors = ["Crisp"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-positioner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
